// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home rendered with all possible props 1`] = `
<Fragment>
  <Component
    className="root className"
    isLoading={false}
  >
    <div
      className="imageContainer"
      style={
        Object {
          "backgroundImage": "url(https://www.example.com/eifel.jpg)",
          "backgroundSize": "cover",
        }
      }
    />
  </Component>
  <img
    alt="Profile photo"
    hidden={true}
    onError={[Function]}
    onLoad={[Function]}
    src="https://www.example.com/eifel.jpg"
  />
</Fragment>
`;

exports[`Home rendered with minimum set of props 1`] = `
<Fragment>
  <Component
    className="root"
    isLoading={false}
  >
    <div
      className="imageContainer"
      style={
        Object {
          "backgroundImage": "url(https://www.example.com/eifel.jpg)",
          "backgroundSize": "contain",
        }
      }
    />
  </Component>
  <img
    hidden={true}
    onError={[Function]}
    onLoad={[Function]}
    src="https://www.example.com/eifel.jpg"
  />
</Fragment>
`;
